themes/harassmap/assets/scss/modules/_typography.scss
@import '../variables';
@import "rem";

h2 {
  color: $white;
  text-transform: uppercase;
  font-family: $oswald;
  font-weight: $light;

  @include rem((font-size: 36px, padding: 0 0 30px, margin: 0));

  .static-content & {
    color: $black;
  }
}

h3 {
  color: $tundora;
  font-family: $merriweather;
  font-weight: $light;

  @include rem((font-size: 24px, padding: 0, margin: 0));
}

h4 {
  color: $green;
  font-weight: $bold;

  @include rem((font-size: 20px, line-height: 30px, padding: 0 0 20px, margin: 0));
}

p {
  font-family: $merriweather;
  font-weight: $light;

  @include rem((font-size: 14px, padding: 30px 0, margin: 0));

  .static-content & {
    @include rem((padding: 15px 0));
  }
}

// text styles
.priority-2 {
  letter-spacing: 1px;
  text-transform: uppercase;

  color: $white;

  font-family: $oswald;
  font-weight: $normal;

  @include rem((font-size: 14px));
}

// Horizontal rule with text in the middle
.hr {
  color: $tundora;
  font-family: $oswald;
  font-weight: $light;
  text-transform: uppercase;
  position: relative;

  @include rem((font-size: 20px, margin: 15px 0 35px));

  .hr__line {
    background-color: $dusty-gray;
    position: absolute;
    width: 100%;
    top: 50%;
    left: 0;
    z-index: -1;

    @include rem((height: 1px));

    @include media-breakpoint-down(sm) {

    }
  }

  .hr__text {
    background-color: $white;
    z-index: 2;

    @include rem((padding: 0 25px 0 0));

    .ar & {
      @include rem((padding: 0 0 0 25px));
    }

    @include media-breakpoint-down(sm) {

    }
  }
}

.hr--center {
  text-align: center;

  .hr__text {
    @include rem((padding: 0 25px));

    .ar & {
      @include rem((padding: 0 25px));
    }
  }
}

.hr--thin {
  @include rem((margin: 15px 0));
}

.faded {
  opacity: 0.8;
}

